--- a/ironcat/static/css/graph-creator.less
+++ b/ironcat/static/css/graph-creator.less
@@ -9,8 +9,8 @@
 @fill-value:         #a0ffff;
 @font-primary:       'Ubuntu','Menlo','Helvetica Neue',Helvetica,Arial,sans-serif;
 @text-primary:       #ffffff;
-@text-hover:         #ff0000;
-@text-editing:       #ff8080;
+@text-hover:         #00ff00;
+@text-editing:       #50ff50;
 
 @modal-width:  400px;
 
