--- a/ironcat/templates/global.html
+++ b/ironcat/templates/global.html
@@ -9,6 +9,8 @@
     <script src="/static/lib/bootstrap/js/bootstrap-select.min.js"></script>
     <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.0/js/bootstrap-toggle.min.js"></script>
     <script src="/static/lib/d3.min.js"></script>
+    <script src="/static/scripts/move_to_front.js"></script>
+    <script src="/static/scripts/edit_text.js"></script>
     <script src="/static/lib/jquery.debounce.min.js"></script>
     <script src="/static/scripts/start.js"></script>
     <link rel="stylesheet" href="/static/lib/bootstrap/css/bootstrap.min.css"/>
