--- a/ironcat/static/css/graph-creator.less
+++ b/ironcat/static/css/graph-creator.less
@@ -20,6 +20,9 @@
 /**
  * Main body stuff.
  */
+html, body {
+  overflow: hidden;
+}
 body {
   background-color: @fill-bg !important;
   font-family: @font-primary !important;
