--- a/ironcat/templates/global.html
+++ b/ironcat/templates/global.html
@@ -2,6 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>{% block title %}IronCat{% endblock %}</title>
     <script src="/static/lib/jquery.min.js"></script>
     <script src="/static/lib/jquery.cookie.js"></script>
