--- a/ironcat/static/css/graph-creator.less
+++ b/ironcat/static/css/graph-creator.less
@@ -421,6 +421,9 @@ text {
         stroke-width: 0;
         transition: all 0.25s;
       }
+      .value-types {
+        visibility: hidden;
+      }
       &:hover, &:active, &.edit {
         rect {
           fill: @fill-fg-hover;
@@ -429,6 +432,9 @@ text {
         }
         text {
           fill: @text-primary;
+        }
+        .value-types {
+          visibility: visible;
         }
       }
       &.error {
