--- a/ironcat/static/css/graph-creator.css
+++ b/ironcat/static/css/graph-creator.css
@@ -281,12 +281,17 @@ text {
 .node .node-input .pin-value rect,
 .node .node-output .pin-value rect {
   fill: #a0ffff;
-  stroke-width: 0;
+  stroke: none;
   transition: all 0.25s;
 }
 .node .node-input .pin-value .value-types,
 .node .node-output .pin-value .value-types {
   visibility: hidden;
+}
+.node .node-input .pin-value .value-types rect,
+.node .node-output .pin-value .value-types rect {
+  stroke: none;
+  fill: #000000;
 }
 .node .node-input .pin-value:hover rect,
 .node .node-output .pin-value:hover rect,
@@ -304,7 +309,7 @@ text {
 .node .node-output .pin-value:active text,
 .node .node-input .pin-value.edit text,
 .node .node-output .pin-value.edit text {
-  fill: #ffffff;
+  fill: #50ff50;
 }
 .node .node-input .pin-value:hover .value-types,
 .node .node-output .pin-value:hover .value-types,
@@ -313,7 +318,6 @@ text {
 .node .node-input .pin-value.edit .value-types,
 .node .node-output .pin-value.edit .value-types {
   visibility: visible;
-  border: 4px solid red;
 }
 .node .node-input .pin-value:hover .value-types .value-type,
 .node .node-output .pin-value:hover .value-types .value-type,
@@ -323,6 +327,24 @@ text {
 .node .node-output .pin-value.edit .value-types .value-type {
   visibility: hidden;
 }
+.node .node-input .pin-value:hover .value-types .value-type text,
+.node .node-output .pin-value:hover .value-types .value-type text,
+.node .node-input .pin-value:active .value-types .value-type text,
+.node .node-output .pin-value:active .value-types .value-type text,
+.node .node-input .pin-value.edit .value-types .value-type text,
+.node .node-output .pin-value.edit .value-types .value-type text {
+  fill: rgba(255, 255, 255, 0);
+  transition: all 0.25s;
+}
+.node .node-input .pin-value:hover .value-types .value-type rect,
+.node .node-output .pin-value:hover .value-types .value-type rect,
+.node .node-input .pin-value:active .value-types .value-type rect,
+.node .node-output .pin-value:active .value-types .value-type rect,
+.node .node-input .pin-value.edit .value-types .value-type rect,
+.node .node-output .pin-value.edit .value-types .value-type rect {
+  stroke: none;
+  fill: #000000;
+}
 .node .node-input .pin-value:hover .value-types .value-type.active,
 .node .node-output .pin-value:hover .value-types .value-type.active,
 .node .node-input .pin-value:active .value-types .value-type.active,
@@ -330,22 +352,6 @@ text {
 .node .node-input .pin-value.edit .value-types .value-type.active,
 .node .node-output .pin-value.edit .value-types .value-type.active {
   visibility: visible;
-}
-.node .node-input .pin-value:hover .value-types .value-type.active text,
-.node .node-output .pin-value:hover .value-types .value-type.active text,
-.node .node-input .pin-value:active .value-types .value-type.active text,
-.node .node-output .pin-value:active .value-types .value-type.active text,
-.node .node-input .pin-value.edit .value-types .value-type.active text,
-.node .node-output .pin-value.edit .value-types .value-type.active text {
-  fill: #50ff50;
-}
-.node .node-input .pin-value:hover .value-types .value-type text,
-.node .node-output .pin-value:hover .value-types .value-type text,
-.node .node-input .pin-value:active .value-types .value-type text,
-.node .node-output .pin-value:active .value-types .value-type text,
-.node .node-input .pin-value.edit .value-types .value-type text,
-.node .node-output .pin-value.edit .value-types .value-type text {
-  fill: #ffffff;
 }
 .node .node-input .pin-value:hover .value-types .value-type:hover,
 .node .node-output .pin-value:hover .value-types .value-type:hover,
@@ -362,6 +368,14 @@ text {
 .node .node-input .pin-value.edit .value-types .value-type:hover text,
 .node .node-output .pin-value.edit .value-types .value-type:hover text {
   fill: #00ff00;
+}
+.node .node-input .pin-value:hover .value-types .value-type:hover rect,
+.node .node-output .pin-value:hover .value-types .value-type:hover rect,
+.node .node-input .pin-value:active .value-types .value-type:hover rect,
+.node .node-output .pin-value:active .value-types .value-type:hover rect,
+.node .node-input .pin-value.edit .value-types .value-type:hover rect,
+.node .node-output .pin-value.edit .value-types .value-type:hover rect {
+  fill: #203030;
 }
 .node .node-input .pin-value.edit .value-types .value-type,
 .node .node-output .pin-value.edit .value-types .value-type {
