--- a/ironcat/static/css/graph-creator.less
+++ b/ironcat/static/css/graph-creator.less
@@ -15,6 +15,7 @@
 @text-editing:       #50ff50;
 @text-error:         #ff4040;
 @text-active:        #50ff50;
+@text-invisible:     rgba(255, 255, 255, 0);
 
 @modal-width:  400px;
 
@@ -358,11 +359,15 @@ text {
     .pin-value {
       rect {
         fill: @fill-value;
-        stroke-width: 0;
+        stroke: none;
         transition: all 0.25s;
       }
       .value-types {
         visibility: hidden;
+        rect {
+          stroke: none;
+          fill: @fill-fg-primary;
+        }
       }
       &:hover, &:active, &.edit {
         rect {
@@ -371,26 +376,30 @@ text {
           stroke-width: 2px;
         }
         text {
-          fill: @text-primary;
+          fill: @text-editing;
         }
         .value-types {
           visibility: visible;
-          border: 4px solid red;
           .value-type {
             visibility: hidden;
+            text {
+              fill: @text-invisible;
+              transition: all 0.25s;
+            }
+            rect {
+              stroke: none;
+              fill: @fill-fg-primary;
+            }
             &.active {
               visibility: visible;
-              text {
-                fill: @text-active;
-              }
-            }
-            text {
-              fill: @text-primary;
             }
             &:hover {
               cursor: pointer;
               text {
                 fill: @text-hover;
+              }
+              rect {
+                fill: @fill-fg-hover;
               }
             }
           }
