made it all look even prettier

--- a/ironcat/static/css/graph-creator.less
+++ b/ironcat/static/css/graph-creator.less
@@ -14,7 +14,7 @@
 @text-hover:         #00ff00;
 @text-editing:       #50ff50;
 @text-error:         #ff4040;
-@text-active:        #50ff50;
+@text-active:        #00ffff;
 @text-invisible:     rgba(255, 255, 255, 0);
 
 @modal-width:  400px;
@@ -389,9 +389,6 @@ text {
             rect {
               stroke: none;
               fill: @fill-fg-primary;
-            }
-            &.active {
-              visibility: visible;
             }
             &:hover {
               cursor: pointer;
