--- a/ironcat/templates/contribute.html
+++ b/ironcat/templates/contribute.html
@@ -36,14 +36,14 @@
                 <rect transform="rotate(-45)translate(-6, -1.5)" width="12" height="3" style="fill: #ffffff;"></rect>
             </g>
             <g id="errorType">
-                <polygon points="0 -5 -6 5 6 5" stroke-linejoin="round" stroke-width="2" stroke="#ffffff" fill="#ffffff"/>
-                <text y="2" text-anchor="middle" dominant-baseline="middle" style="font-size: 11px; font-weight: 900; fill: #000000;">!</text>
+                <polygon points="0 -6 -6 4 6 4" stroke-linejoin="round" stroke-width="2" stroke="#ffffff" fill="#ffffff"/>
+                <text y="1" text-anchor="middle" dominant-baseline="middle" style="font-size: 11px; font-weight: 900; fill: #000000;">!</text>
             </g>
             <g id="stringType">
-                <text text-anchor="middle" dominant-baseline="middle" style="font-size: 12px; fill: #ffffff;">Aa</text>
+                <text y="1" text-anchor="middle" dominant-baseline="middle" style="font-size: 12px; fill: #ffffff;">Aa</text>
             </g>
             <g id="numberType">
-                <text text-anchor="middle" dominant-baseline="middle" style="font-size: 12px; fill: #ffffff;">#</text>
+                <text y="1" text-anchor="middle" dominant-baseline="middle" style="font-size: 12px; fill: #ffffff;">#</text>
             </g>
             <g id="booleanType">
                 <path d="M6,0 A 6,6 0 0,1 -6,0 Z" fill="white"/>
