--- a/ironcat/static/css/graph-creator.css
+++ b/ironcat/static/css/graph-creator.css
@@ -341,7 +341,13 @@ text {
 .node .node-input .pin-value:active .value-types .value-type rect,
 .node .node-output .pin-value:active .value-types .value-type rect,
 .node .node-input .pin-value.edit .value-types .value-type rect,
-.node .node-output .pin-value.edit .value-types .value-type rect {
+.node .node-output .pin-value.edit .value-types .value-type rect,
+.node .node-input .pin-value:hover .value-types .value-type circle,
+.node .node-output .pin-value:hover .value-types .value-type circle,
+.node .node-input .pin-value:active .value-types .value-type circle,
+.node .node-output .pin-value:active .value-types .value-type circle,
+.node .node-input .pin-value.edit .value-types .value-type circle,
+.node .node-output .pin-value.edit .value-types .value-type circle {
   stroke: none;
   fill: #000000;
 }
@@ -366,8 +372,16 @@ text {
 .node .node-input .pin-value:active .value-types .value-type:hover rect,
 .node .node-output .pin-value:active .value-types .value-type:hover rect,
 .node .node-input .pin-value.edit .value-types .value-type:hover rect,
-.node .node-output .pin-value.edit .value-types .value-type:hover rect {
+.node .node-output .pin-value.edit .value-types .value-type:hover rect,
+.node .node-input .pin-value:hover .value-types .value-type:hover circle,
+.node .node-output .pin-value:hover .value-types .value-type:hover circle,
+.node .node-input .pin-value:active .value-types .value-type:hover circle,
+.node .node-output .pin-value:active .value-types .value-type:hover circle,
+.node .node-input .pin-value.edit .value-types .value-type:hover circle,
+.node .node-output .pin-value.edit .value-types .value-type:hover circle {
   fill: #203030;
+  stroke: #00ffff;
+  stroke-width: 1;
 }
 .node .node-input .pin-value.edit .value-types .value-type,
 .node .node-output .pin-value.edit .value-types .value-type {
