--- a/ironcat/static/css/graph-creator.css
+++ b/ironcat/static/css/graph-creator.css
@@ -9,8 +9,8 @@ body {
   background-color: #000000 !important;
   font-family: 'Ubuntu', 'Menlo', 'Helvetica Neue', Helvetica, Arial, sans-serif !important;
 }
-a {
-  transition: all 0.25s;
+* {
+  transition: all 0.25s ease-in-out;
 }
 .container {
   margin: 0 !important;
@@ -60,16 +60,8 @@ body {
   user-select: none;
   background-color: #f8f8f8;
 }
-.conceptG text {
-  pointer-events: none;
-}
 marker {
   fill: #333;
-}
-.node rect {
-  fill: #F6FBFF;
-  stroke: #333;
-  stroke-width: 2px;
 }
 g.selected rect {
   fill: #fae8ff;
@@ -82,7 +74,6 @@ g.selected:hover rect {
   stroke: #00ffff;
   stroke-width: 6px;
   cursor: default;
-  transition: all 0.25s;
 }
 .link.hidden {
   stroke-width: 0;
@@ -108,7 +99,6 @@ input.function-name {
   cursor: pointer;
 }
 .pin-delete circle {
-  transition: all 0.2s ease-in-out;
   fill: #000000;
   stroke: #00ffff;
   stroke-width: 1px;
@@ -139,7 +129,6 @@ input.function-name {
   cursor: pointer;
 }
 .pin-add circle {
-  transition: all 0.2s ease-in-out;
   fill: #000000;
   stroke: #00ffff;
   stroke-width: 1px;
@@ -188,7 +177,6 @@ input.function-name {
 .output circle {
   stroke: #00ffff;
   fill: #007070;
-  transition: fill 0.25s;
 }
 .input.connected circle,
 .output.connected circle {
@@ -208,7 +196,6 @@ input.function-name {
   font-size: 16px;
   color: #ffffff;
   fill: #ffffff;
-  transition: all 0.25s;
 }
 .node-header .node-label:hover .node-function-name {
   fill: #00ff00;
@@ -220,19 +207,16 @@ text {
   fill: #000000;
   stroke: #00ffff;
   stroke-width: 2;
-  transition: all 0.25s;
 }
 .node .node-delete circle {
   stroke: none;
   fill: rgba(0, 0, 0, 0);
-  transition: all 0.25s;
 }
 .node .node-delete text {
   fill: rgba(0, 255, 255, 0);
   font-size: 22px;
   font-weight: bold;
   user-select: none;
-  transition: all 0.25s;
 }
 .node .node-delete use {
   opacity: 0;
@@ -266,66 +250,49 @@ text {
   fill: #000000;
   stroke: #d0d0d0;
   stroke-width: 1px;
-  transition: all 0.15s;
 }
 .node .search-results .search-result text {
   fill: #ffffff;
-  transition: all 0.15s;
 }
-.node .node-input circle,
-.node .node-output circle {
+.node .node-input > circle,
+.node .node-output > circle {
   stroke: #00ffff;
   fill: #007070;
-  transition: fill 0.25s;
 }
-.node .node-input .pin-value rect,
-.node .node-output .pin-value rect {
+.node .node-input .pin-value > rect,
+.node .node-output .pin-value > rect {
   fill: #a0ffff;
   stroke: none;
-  transition: all 0.25s;
 }
 .node .node-input .pin-value .value-types,
 .node .node-output .pin-value .value-types {
-  visibility: hidden;
+  display: none;
+  opacity: 0;
 }
-.node .node-input .pin-value .value-types rect,
-.node .node-output .pin-value .value-types rect {
-  stroke: none;
-  fill: #000000;
+.node .node-input .pin-value .value-types > rect,
+.node .node-output .pin-value .value-types > rect,
+.node .node-input .pin-value .value-types > circle,
+.node .node-output .pin-value .value-types > circle {
+  stroke: #203030;
+  fill: none;
 }
-.node .node-input .pin-value:hover rect,
-.node .node-output .pin-value:hover rect,
-.node .node-input .pin-value:active rect,
-.node .node-output .pin-value:active rect,
-.node .node-input .pin-value.edit rect,
-.node .node-output .pin-value.edit rect {
+.node .node-input .pin-value:hover > rect,
+.node .node-output .pin-value:hover > rect,
+.node .node-input .pin-value:active > rect,
+.node .node-output .pin-value:active > rect,
+.node .node-input .pin-value.edit > rect,
+.node .node-output .pin-value.edit > rect {
   fill: #203030;
   stroke: #00ffff;
   stroke-width: 2px;
 }
-.node .node-input .pin-value:hover text,
-.node .node-output .pin-value:hover text,
-.node .node-input .pin-value:active text,
-.node .node-output .pin-value:active text,
-.node .node-input .pin-value.edit text,
-.node .node-output .pin-value.edit text {
+.node .node-input .pin-value:hover > text,
+.node .node-output .pin-value:hover > text,
+.node .node-input .pin-value:active > text,
+.node .node-output .pin-value:active > text,
+.node .node-input .pin-value.edit > text,
+.node .node-output .pin-value.edit > text {
   fill: #50ff50;
-}
-.node .node-input .pin-value:hover .value-types,
-.node .node-output .pin-value:hover .value-types,
-.node .node-input .pin-value:active .value-types,
-.node .node-output .pin-value:active .value-types,
-.node .node-input .pin-value.edit .value-types,
-.node .node-output .pin-value.edit .value-types {
-  visibility: visible;
-}
-.node .node-input .pin-value:hover .value-types .value-type,
-.node .node-output .pin-value:hover .value-types .value-type,
-.node .node-input .pin-value:active .value-types .value-type,
-.node .node-output .pin-value:active .value-types .value-type,
-.node .node-input .pin-value.edit .value-types .value-type,
-.node .node-output .pin-value.edit .value-types .value-type {
-  visibility: hidden;
 }
 .node .node-input .pin-value:hover .value-types .value-type text,
 .node .node-output .pin-value:hover .value-types .value-type text,
@@ -334,7 +301,6 @@ text {
 .node .node-input .pin-value.edit .value-types .value-type text,
 .node .node-output .pin-value.edit .value-types .value-type text {
   fill: rgba(255, 255, 255, 0);
-  transition: all 0.25s;
 }
 .node .node-input .pin-value:hover .value-types .value-type rect,
 .node .node-output .pin-value:hover .value-types .value-type rect,
@@ -383,9 +349,32 @@ text {
   stroke: #00ffff;
   stroke-width: 1;
 }
-.node .node-input .pin-value.edit .value-types .value-type,
-.node .node-output .pin-value.edit .value-types .value-type {
-  visibility: visible;
+.node .node-input .pin-value:hover .value-types .value-type.active,
+.node .node-output .pin-value:hover .value-types .value-type.active,
+.node .node-input .pin-value:active .value-types .value-type.active,
+.node .node-output .pin-value:active .value-types .value-type.active,
+.node .node-input .pin-value.edit .value-types .value-type.active,
+.node .node-output .pin-value.edit .value-types .value-type.active {
+  cursor: inherit;
+}
+.node .node-input .pin-value:hover .value-types .value-type.active rect,
+.node .node-output .pin-value:hover .value-types .value-type.active rect,
+.node .node-input .pin-value:active .value-types .value-type.active rect,
+.node .node-output .pin-value:active .value-types .value-type.active rect,
+.node .node-input .pin-value.edit .value-types .value-type.active rect,
+.node .node-output .pin-value.edit .value-types .value-type.active rect,
+.node .node-input .pin-value:hover .value-types .value-type.active circle,
+.node .node-output .pin-value:hover .value-types .value-type.active circle,
+.node .node-input .pin-value:active .value-types .value-type.active circle,
+.node .node-output .pin-value:active .value-types .value-type.active circle,
+.node .node-input .pin-value.edit .value-types .value-type.active circle,
+.node .node-output .pin-value.edit .value-types .value-type.active circle {
+  visibility: hidden;
+}
+.node .node-input .pin-value.edit .value-types,
+.node .node-output .pin-value.edit .value-types {
+  display: inherit;
+  opacity: 1;
 }
 .node .node-input .pin-value.error rect,
 .node .node-output .pin-value.error rect {
