--- a/ironcat/templates/global.html
+++ b/ironcat/templates/global.html
@@ -8,6 +8,7 @@
     <script src="/static/lib/jquery.cookie.js"></script>
     <script src="/static/lib/bootstrap/js/bootstrap.min.js"></script>
     <script src="/static/lib/bootstrap/js/bootstrap-select.min.js"></script>
+    <script src="/static/lib/jquery.autocomplete.min.js"></script>
     <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.0/js/bootstrap-toggle.min.js"></script>
     <script src="/static/lib/d3.min.js"></script>
     <script src="/static/scripts/draw_helpers.js"></script>
@@ -19,6 +20,7 @@
     <link rel="stylesheet" href="/static/lib/bootstrap/css/bootstrap-select.min.css" />
     <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.0/css/bootstrap-toggle.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/static/lib/font-awesome/css/font-awesome.min.css"/>
+    <link href="/static/css/styles.css" rel="stylesheet"/>
     {% block include %}{% endblock %}
 </head>
 <body>
