--- a/ironcat/static/css/styles.less
+++ b/ironcat/static/css/styles.less
@@ -353,7 +353,7 @@ text {
         opacity: 0;
         >rect, >circle{
           stroke: @fill-fg-hover;
-          fill: none;
+          fill: @fill-fg-hover;
         }
       }
       &:hover, &:active, &.edit {
