modularized js; made selection of values easier

--- a/ironcat/static/css/styles.less
+++ b/ironcat/static/css/styles.less
@@ -343,7 +343,7 @@ text {
       stroke: @stroke-primary;
       fill: @pin-fill-inactive;
     }
-    .pin-value {
+    .value {
       >rect {
         fill: @fill-value;
         stroke: none;
@@ -411,7 +411,7 @@ text {
       circle {
         fill: @pin-fill-active;
       }
-      .pin-value {
+      .value {
         display: none;
       }
     }
